dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: guestbook-ui
    labels:
        app.kubernetes.io/name: web-app
spec:
    replicas: 1
    revisionHistoryLimit: 3
    strategy:
    selector:
        matchLabels:
            app.kubernetes.io/name: guestbook-ui
    template:
        metadata:
            labels:
                app.kubernetes.io/name: guestbook-ui
        spec:
            containers:
                - image: nginx:latest
                  imagePullPolicy: Always
                  name: guestbook-ui
                  ports:
                      - containerPort: 80
                  volumeMounts:
                      - name: guestbook-ui-volume
                        mountPath: /usr/share/nginx/html
            volumes:
                - name: guestbook-ui-volume
                  persistentVolumeClaim:
                      claimName: nginx-test
