dev/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: guestbook-ui
    labels:
        app.kubernetes.io/name: guestbook-ui
spec:
    selector:
        app.kubernetes.io/name: guestbook-ui
    ports:
        - name: http
          port: 80
          targetPort: 80
