dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: guestbook-ui
    annotations:
        kubernetes.io/ingress.ingressClassName: 'nginx'
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: guestbook-ui.lab
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: guestbook-ui
                            port:
                                number: 80
